[package]
name = "volt"
version = "0.1.0"
authors = ["Interfiber"]
edition = "2018"

[dependencies]
# UI toolkits
kas = "0.7.0"
kas-theme = "0.7.0"
kas-wgpu = "0.7.0"
# API requests(used to use curl)
isahc = "1.3.0"
# Json parsing fro CurseForge
serde_json = "1.0.64"
# Download files using cURL. Because using a http library is annoying. Plus JAR files are
# Not UTF-8, and a String can only be UTF-8
subprocess = "0.2.6"
# Enviroment Varbile utils
envmnt = "0.9.0"